Creando rama de Landing Page, mergear después de terminar

--- a/Landing Page/Website Elements/index.html
+++ b/Landing Page/Website Elements/index.html
@@ -16,11 +16,24 @@
             <div class="navegacion">
                 <span class="logo">&lt;Java Café/&gt;</span>
                 <nav>
+                    <div class="contenedor_boton">
+                        <a href="" class="boton_plegable">
+                            <span class="barra"></span>
+                            <span class="barra"></span>
+                            <span class="barra"></span>
+                        </a>
+                    </div>
                     <ul>
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">¿Quiénes somos?</a></li>
                         <li><a href="#">Contacto</a></li>
                         <li><a href="#">Nuestros Platillos</a></li>
+                        <li>
+                            <div class="luna">
+                                <button class="modo_oscuro">Cambiar Modo</button>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="2vw" heigh="2vh"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M421.6 379.9c-.6641 0-1.35 .0625-2.049 .1953c-11.24 2.143-22.37 3.17-33.32 3.17c-94.81 0-174.1-77.14-174.1-175.5c0-63.19 33.79-121.3 88.73-152.6c8.467-4.812 6.339-17.66-3.279-19.44c-11.2-2.078-29.53-3.746-40.9-3.746C132.3 31.1 32 132.2 32 256c0 123.6 100.1 224 223.8 224c69.04 0 132.1-31.45 173.8-82.93C435.3 389.1 429.1 379.9 421.6 379.9zM255.8 432C158.9 432 80 353 80 256c0-76.32 48.77-141.4 116.7-165.8C175.2 125 163.2 165.6 163.2 207.8c0 99.44 65.13 183.9 154.9 212.8C298.5 428.1 277.4 432 255.8 432z"/></svg>
+                            </div>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -80,6 +93,24 @@
 
 
     <div class="colorcito"></div>
+
+
+    <div class="row-3">
+
+        <h1 class="separador">Algunos de nuestros platillos que vas a poder <span class="subrayado">disfrutar: </span></h1>
+
+        <div class="col-6">
+            <img src="/Images/cake.jpg" alt="Pastel" width="300px" height="200px">
+            <img src="/Images/cookies.jpg" alt="Galletas" width="300px" height="200px">
+            <img src="/Images/coffeecup.jpg" alt="Café" width="300px" height="200px">
+            <img src="/Images/pie.jpg" alt="Pie" width="300px" height="200px">
+        </div>
+    </div>
+
+
+    <div class="colorcito"></div>
+
+
 
     <h1 class="separador">Cada persona, cada programador, <span class="subrayado">es una historia</span>.</h1>
 
