--- a/products.html
+++ b/products.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pstyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="pstyle.css">
     <link rel="icon" href="Tp-cac1.ico">
     <title>Nuestros productos</title>
 </head>
@@ -33,10 +38,9 @@
          </div>
     </nav>
 
-
-    <div class="cuerpo">    
+    <h1>Nuestro Menú:</h1>  
+    <section>  
         <div class="lista">
-            <h2>Nuestro Menú:</h2>
             <ul>
                 <li>Café</li>
                     <ul>
@@ -78,9 +82,44 @@
        <div class="foto1"></div>
        <div class="foto2"></div>
        <div class="foto3"></div>
-     </div>  
+       </div> 
 
-</div>
+       <div class="container2">
+        <div class="foto4"></div>
+        <div class="foto5"></div>
+        <div class="foto6"></div>
+      </div>
+     
+     <div class="lista2">
+        <ul class="list1">
+            <li>Tortas:</li>
+              <ul>
+                <li>Apple Pie</li>
+                <li>Lemon Pie</li>
+                <li>Balcarce</li>
+                <li>Espejo de Chocolate</li>
+                <li>Selva Negra</li>
+                <li>Torta Alfajor</li>
+              </ul>
+            <li>Panadería Artesanal:</li>
+            <ul>
+                <li>Croasiant</li>
+                <li>Cinabun Roll</li>
+                <li>Eclairs(Rellenos de crema pastelera, pistachos, dulce de leche, crema chantilly)</li>
+                <li>Muffins (Rellenos de vainilla, chocolate, frutos del bosque, mermelada frutal de estación)</li>
+            </ul>
+            <li>Salados:</li>
+            <ul>
+                <li>Sandwiches de miga(jamon y queso, tomates y albahaca - huevo duro y queso)</li>
+                <li>Brusquettas(palta, jamón crudo y huevo - vegetariana - jamon cocido, pistachos y queso Brie)</li>
+                <li>Tostadas Integrales(manteca, ajo y tomates cherries - palta, huevo y jamon cocido)</li>
+            </ul>
+        </ul>
+     </div>
+
+
+
+    </section>
     <footer>
     
         <div class="links">
@@ -92,6 +131,9 @@
            </div>
            <div>
              <a href="https://ar.linkedin.com"><img src=".//icono-de-linkedin.png" alt="Enlace a in" width="50px" height="50px"></a>
+           </div>
+           <div>
+            <a href="https://www.google.com/maps/place/Java/@-34.6868339,-58.6838399,15z/data=!4m2!3m1!1s0x0:0xc3c0c90023516785?sa=X&hl=es&ved=2ahUKEwiZz8Sm8Lj6AhVjpZUCHZ4QDqgQ_BJ6BAhjEAg"><img src="./png-clipart-responsive-web-design-google-maps-computer-icons-map-web-design-logo.png" alt="Enlace a maps" width="50px" height="50px"></a>
            </div>
         </div>
         <div class="parrafo">
