--- a/Java Cafe2/4-Contacto.html
+++ b/Java Cafe2/4-Contacto.html
@@ -25,15 +25,7 @@
                     <ul>
                         <li><a href="1-index.HTML">Inicio</a></li>
                         <li><a href="./2-QuienesSomos.html">Quines Somos</a></li>
-                        <li><a href="./3-Nuestros Productos.html">Nuestros Productos</a>
-                            <ul>
-                                <li><a href="#">Café</a></li>
-                                <li><a href="#">Cápsulas</a></li>
-                                <li><a href="#">Chocolates</a></li>
-                                <li><a href="#">Gastronomía</a></li>
-                                <li><a href="#">Pastelería</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./3-Nuestros Productos.html">Nuestros Productos</a></li>
                         <li><a href="./4-Contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
