--- a/Java Cafe2/4-Contacto.html
+++ b/Java Cafe2/4-Contacto.html
@@ -64,22 +64,22 @@
                 <form action="/" method="POST" id="form">
                     <div class="grupo">
                         <input type="text" name="nombre" id="nombre" class="form__input" placeholder="Nombre">
-                        <label for="nombre" class="form__label">Nombre</label>
+                        <label for="nombre" class="form__label"></label>
                     </div>
 
                     <div class="grupo">
                         <input type="text" name="apellido" id="apellido" class="form__input" placeholder="Apellido">
-                        <label for="apellido" class="form__label">Apellido</label>
+                        <label for="apellido" class="form__label"></label>
                     </div>
 
                     <div class="grupo">
                         <input type="email" name="email" id="email" class="form__input" placeholder="Email">
-                        <label for="email" class="form__label">Email</label>
+                        <label for="email" class="form__label"></label>
                     </div>
 
                     <div class="grupo">
                         <input type="text" name="telefono" id="telefono" class="form__input" placeholder="Telefono">
-                        <label for="telefono" class="form__label">Telefono</label>
+                        <label for="telefono" class="form__label"></label>
                     </div>
                     
                     <div>
